objects/artfeed__Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>artfeed__Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>artfeed__Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Article Archived</fullName>
                </value>
                <value>
                    <fullName>Article Updated</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>artfeed__Article_ID__c</fullName>
        <label>Article ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>artfeed__Article_Link__c</fullName>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>artfeed__Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>artfeed__Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>artfeed__Article_Type__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>artfeed__Article_Version__c</fullName>
        <label>Article Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>artfeed__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>artfeed__Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>artfeed__Feedback_Description__c</fullName>
        <label>Feedback Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>artfeed__Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>artfeed__Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>artfeed__Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>artfeed__Unlike_Reason__c</fullName>
        <label>General Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>artfeed__All</fullName>
        <columns>NAME</columns>
        <columns>artfeed__Like__c</columns>
        <columns>artfeed__Unlike_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Articles Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>